# holocollect

./: .env.sample  README.md  pyproject.toml
app/: __main__.py  collector.py  logger.py  mongodb.py  settings.py
app/models/: schedule.py  schedules.py  streamers.py
holocollect/: __init__.py  __main__.py  collector.py  logger.py  mongodb.py  settings.py
holocollect/configs/: logger.json
holocollect/models/: __init__.py  holodule.py  holodules.py  schedules.py  streamer.py  streamers.py
holocollect/utils/: logger.py
