[tool.poetry]
name = "app"
version = "1.0.0"
description = "ホロジュールの配信情報を収集"
authors = ["kerobot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.16.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.112.0"
lxml = "^5.0.1"
pylint = "^3.0.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
